@@ -9,6 +9,7 @@ the given object was formerly attached to was garbage collected;
 otherwise still requires you explicitly remove the instance from 
 the previous Session.
 - fixes to mapper compilation, checking for more error conditions
+- small fix to eager loading combined with ordering/limit/offset
 
 0.2.3
 - overhaul to mapper compilation to be deferred.  this allows mappers
